--- a/list.html
+++ b/list.html
@@ -94,7 +94,7 @@
   
   // add dropbox client
   var client = new Dropbox.Client({
-      key: "cxcu0rglcs0kmy7", secret: "rytggrsypjh4h7t", sandbox: true
+      'key': key, 'secret': secret, 'sandbox': true
   });
   client.authDriver(new Dropbox.Drivers.Redirect());
 
